Funcion de pantalla completa

--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -69,7 +69,7 @@
         <img id="ella_opcion" src="img/Todas/ella_inicio.png" onclick="ellaSeleccionado()">
         <p class="secBienvenidosTextoStyle" id="posiNombreTexto">¿Como deberias llamarte?</p>
         <form id="inputNombre">
-            <input id="nombreUsuario" type="text" name="nombreUsuario" placeholder="Nombre de usuario">
+            <input id="nombreUsuario" type="text" name="nombreUsuario" placeholder="Tu nombre">
             <img id="icono_nombre_usuario" src="img/Todas/icono_nombre_usuario.png">
         </form>
         <img id="boton_siguiente" src="img/Todas/siguiente.png" onclick="clickEnSiguiente()">
@@ -116,7 +116,7 @@
     </section>
     <section id="SecEnfoque" class="SecEnfoque ocultar">
         <div id="infoUsuario">
-            <div id="headInfoUsuario">
+            <div id="headInfoUsuarioEnf">
                 <img id="volverEnf" src="img/pantallas/pruebas/imagenes/volver.png" onclick="clickEnVolverSecUnidad()">
 
                 <span id="textoNombreEnf">Sofia Álvarez</span>
@@ -124,7 +124,7 @@
                     onclick="clickEnVolverSecUnidad()">
                 <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png">
             </div>
-            <div id="bodyInfoUsuario" class="bodyInfoUsuario">
+            <div id="bodyInfoUsuarioEnf" class="bodyInfoUsuario">
                 <img id="imgpersonajeSeleccionadoEnf" src="img/Todas/ella_azul.png">
                 <p id="nivelPruebasEnf">Nivel 1</p>
                 <img id="saludPruebas" src="img/pantallas/pruebas/imagenes/salud.png">
