--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -59,20 +59,23 @@
                 Cada que logres pasar una prueba, haz tap en </br>
                 en dicha prueba. Asi sumarás experiencia para  </br>
                 que tu personaje suba de nivel.
+                <br>
+                Próximamente podrás ponerle una fecha de </br>
+                vencimiento a cada prueba,
             </p>
             <img id="flechaDialogo2" class="ocultar" src="img/Todas/flecha_dialogo.png" onclick="siguienteTextoAna3()">
             <p id="AnaTextPruebas3" class="ocultar">
-                Próximamente podrás ponerle una fecha de </br>
-                vencimiento a cada prueba, esto puede </br>
-                ayudarte a mantener constancia.</br>
-            </p>
-            <img id="flechaDialogo3" class="ocultar" src="img/Todas/flecha_dialogo.png" onclick="siguienteTextoAna4()">
-            <p id="AnaTextPruebas4" class="ocultar">
+                Esto puede ayudarte a mantener constancia.</br>
                 ¡Haz la prueba! Puedes explorar los otros </br>
                 elementos con los botones de navegación. </br>
-
             </p>
             <span id="meQuedaClaroPruebas" class="ocultar" onclick="todoClaroText()">Me queda claro</span>
+            <!-- <img id="flechaDialogo3" class="ocultar" src="img/Todas/flecha_dialogo.png" onclick="siguienteTextoAna4()"> -->
+            <!-- <p id="AnaTextPruebas4" class="ocultar">
+                
+
+            </p> -->
+           
         </div>
     </section>
     <section id="Seccarga" class="Seccarga animated fadeInUpBig">
