--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -150,7 +150,7 @@
     
     <section id="SecUnidad" class="SecUnidad ocultar">
         <section id="encabezadoUnidad">
-            <img id="imgVolverInicio" src="img/Todas/volver_inicio.png" onclick="clickEnVolverSecBienvenidos()">
+            <!-- <img id="imgVolverInicio" src="img/Todas/volver_inicio.png" onclick="clickEnVolverSecBienvenidos()"> -->
             <img id="imgOpcionesInicio" src="img/Todas/opciones_inicio.png" onclick="irCreditos()">
             <p id="nivelText">Nivel 1</p>
             <p id="saludText">Salud</p>
@@ -183,7 +183,7 @@
                 <span id="textoNombreEnf">Sofia Álvarez</span>
                 <img id="volverEnfPuntos" src="img/pantallas/pruebas/imagenes/menu.png"
                     onclick="clickEnVolverSecUnidad()">
-                <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png">
+                <!-- <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png"> -->
             </div>
             <div id="bodyInfoUsuarioEnf" class="bodyInfoUsuario">
                 <img id="imgpersonajeSeleccionadoEnf" src="img/Todas/ella_azul.png">
@@ -232,7 +232,7 @@
                 <span id="nombreTextPrueba">Sofia Álvarez</span>
                 <img id="volverPruebasPuntos" src="img/pantallas/pruebas/imagenes/menu.png"
                     onclick="clickvolverPruebas()">
-                <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png">
+                <!-- <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png"> -->
             </div>
             <div id="bodyInfoUsuario" class="bodyInfoUsuario">
                 <img id="usuarioPruebas" src="img/pantallas/pruebas/imagenes/ella_azul.png">
